@@ -25,6 +25,7 @@
 #include <dirent.h>	/* readdir, dirent */
 #include <signal.h>	/* sigaction, sigemptyset */
 #include <ctype.h>	/* tolower */
+#include <sys/stat.h>	/* stat */
 
 #include <gtk/gtk.h>
 
@@ -503,4 +504,52 @@ const char* bool2str(int i)
     return "false";
   }
   return "true";
+}
+
+char *find_game_dir (char *basegamedir, char *game)
+{
+  DIR *dp;
+  struct dirent *ep;
+  struct stat buf;
+  char *path;
+
+  debug( 1, "Looking for subdir %s in %s", game, basegamedir);
+  
+  // Look for exact match
+  path = file_in_dir (basegamedir, game);
+  if (!stat (path, &buf)) {
+    if (S_ISDIR(buf.st_mode) == 1) {
+      // directory found
+      g_free (path);
+      debug( 1, "Found exact match for subdir %s in %s", game, basegamedir);
+      return g_strdup (game);
+    }
+  }
+  debug( 1, "Did not find exact match for subdir %s in %s", game, basegamedir);
+
+  // Did not find exact match, perform search
+  debug( 1, "Searching for subdir %s in %s ignoring case", game, basegamedir);
+  dp = opendir (basegamedir);
+  if (dp != NULL)
+    {
+      while ((ep = readdir (dp))) {
+	stat(ep->d_name, &buf);
+	if (S_ISDIR(buf.st_mode) == 1)
+	  if (strcmp(ep->d_name,".") && strcmp(ep->d_name,".."))
+	  {
+	    if (!strcasecmp(ep->d_name,game)) {
+              debug( 1, "Found subdir %s in %s that matches %s", ep->d_name, basegamedir,
+                                                                    game);
+	      return g_strdup (ep->d_name);
+	      break;
+	    }
+  	  }
+      }
+      (void) closedir (dp);
+      debug( 1, "Could not find any match for subdir %s in %s.  Using %s",game, 
+                                                                basegamedir, game);
+    }
+  else
+    debug( 1, "Could not open base directory %s!!", basegamedir);
+  return g_strdup (game);
 }
